--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "bun index.ts"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/bun": "latest"
   },
   "peerDependencies": {
