feat(cli): add CLI tool for manual sync operations and request logging
- Add cli.ts with status, sync, activities, and daily commands
- Add npm scripts: cli, sync, status for convenience
- Add request logging with timing for all API endpoints
- Improve observability of sync operations

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "bun --watch index.ts",
-    "start": "bun index.ts"
+    "start": "bun index.ts",
+    "cli": "bun cli.ts",
+    "sync": "bun cli.ts sync",
+    "status": "bun cli.ts status"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
