feat: add automatic background sync scheduler
- Add SyncScheduler class for periodic sync operations
- Support GARMIN_AUTO_SYNC_INTERVAL env var (hours)
- Add /scheduler endpoints for status and manual trigger
- Update .env.example with new configuration option

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ GARMIN_PASSWORD=your_password_here
 
 # Optional: Sync service URL for CLI (default: http://127.0.0.1:17890)
 # GARMIN_SYNC_URL=http://127.0.0.1:17890
+
+# Optional: Auto-sync interval in hours (default: 0/disabled)
+# Set to enable automatic background sync (e.g., 6 = sync every 6 hours)
+# GARMIN_AUTO_SYNC_INTERVAL=6
