feat(tests): add comprehensive test suite for sync service
- Add database schema tests for meta, activities, daily_metrics, sync_log tables
- Add SyncScheduler unit tests covering start/stop/trigger/emit behavior
- Add bun test runner to package.json scripts
- Tests use bun:sqlite for fast in-memory database testing
- 23 tests total, all passing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "bun index.ts",
     "cli": "bun cli.ts",
     "sync": "bun cli.ts sync",
-    "status": "bun cli.ts status"
+    "status": "bun cli.ts status",
+    "test": "bun test"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
