Upgrade sync service configuration and build tooling
- Add esbuild, tsx, and modern TypeScript config for better build compatibility
- Refactor launchd to use run.sh wrapper for simpler config
- Update module imports to use .js extension for correct bundling
- Improve type checking with stricter tsconfig options

--- a/launchd/com.garmin-health-sync.plist
+++ b/launchd/com.garmin-health-sync.plist
@@ -7,21 +7,11 @@
     
     <key>ProgramArguments</key>
     <array>
-        <string>/usr/local/bin/bun</string>
-        <string>run</string>
-        <string>start</string>
+        <string>/Users/might/clawd/repos/garmin-health-sync/run.sh</string>
     </array>
     
     <key>WorkingDirectory</key>
     <string>/Users/might/clawd/repos/garmin-health-sync</string>
-    
-    <key>EnvironmentVariables</key>
-    <dict>
-        <key>GARMIN_DB_PATH</key>
-        <string>/Users/might/clawd/repos/garmin-health-sync/garmin.sqlite</string>
-        <key>GARMIN_SYNC_PORT</key>
-        <string>17890</string>
-    </dict>
     
     <key>RunAtLoad</key>
     <true/>
