--- a/package.json
+++ b/package.json
@@ -14,15 +14,11 @@
     "test": "bun test"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "sqlite3": "^5.1.7",
-    "uuid": "^11.0.3",
-    "better-sqlite3": "^12.6.2",
-    "zod": "^4.3.6",
-    "express": "^4.21.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.8",
+    "better-sqlite3": "^12.6.2",
+    "cors": "^2.8.5",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
@@ -31,6 +27,8 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
+    "express": "^4.21.2",
+    "garmin-connect": "^1.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -38,7 +36,10 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.0.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
